--- a/src/app/core/ui/components/torrent-list/torrent-list.component.scss
+++ b/src/app/core/ui/components/torrent-list/torrent-list.component.scss
@@ -44,3 +44,12 @@ mat-paginator {
   }
 }
 
+.progress {
+  display: none;
+  margin: 0.25rem 0 0 !important;
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
