--- a/src/app/core/ui/components/torrent-details/tracker-details/tracker-details.component.html
+++ b/src/app/core/ui/components/torrent-details/tracker-details/tracker-details.component.html
@@ -1,43 +1,75 @@
 <table mat-table matSort [dataSource]="tableDataSource">
 
   <ng-container matColumnDef="url">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.url' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ element.url }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.url' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div>{{ element.url }}</div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.status' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ 'TORRENT_DETAILS.TRACKERS.STATUS.' + element.status | translate }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.status' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.STATUS.' + element.status | translate }}</div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="tier">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.tier' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ element.tier }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.tier' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div class="mono right">{{ element.tier }}</div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="num_peers">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.num_peers' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ element.num_peers }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.num_peers' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div class="mono right">{{ element.num_peers }}</div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="num_seeds">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.num_seeds' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ element.num_seeds }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.num_seeds' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div class="mono right">{{ element.num_seeds }}</div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="num_leeches">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.num_leeches' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ element.num_leeches }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.num_leeches' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div class="mono right">{{ element.num_leeches }}</div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="num_downloaded">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.num_downloaded' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ element.num_downloaded }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.num_downloaded' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div class="mono right">{{ element.num_downloaded }}</div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="msg">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'TORRENT_DETAILS.TRACKERS.msg' | translate }}</th>
-    <td mat-cell *matCellDef="let element">{{ element.msg }}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <div>{{ 'TORRENT_DETAILS.TRACKERS.msg' | translate }}</div>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <div>{{ element.msg }}</div>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
